syntax = "proto3";

package registr;

option go_package = "./out";

service Registration {
    rpc UpdReg(RegServRequest) returns (EmptyResponse);
    rpc UpdSchedule(ScheduleServRequest) returns (EmptyResponse);
    rpc UpdMedia(MediaServRequest) returns (EmptyResponse);
    rpc UpdSettingSch(SettingServRequestSch) returns (EmptyResponse);
    rpc UpdSettingGWU(SettingServRequestGWU) returns (EmptyResponse);
    rpc SetGamesWithUsers(GWURequest) returns (EmptyResponse);
}

message RegServRequest {
    int64 gameid = 1;
    string sport = 2;
    int64 date = 3;
    int64 time = 4;
    int64 seats = 5;
    double latitude = 6;
    double longitude = 7;
    string address = 8;
    int64 price = 9;
    string currency = 10;
    int64 status = 11;
    bool action = 12;
}

message ScheduleServRequest {
    int64 gameid = 1;
    string sport = 2;
    string date = 3;
    string time = 4;
    int64 seats = 5;
    int64 price = 9;
    string currency = 10;
    string action = 12; //new, del or change
}

message MediaServRequest {
    //Enply
}

message SettingServRequestSch {
    //Empty
}

message SettingServRequestGWU {
    //Empty
}

message GWURequest {
    int64 id = 1;
    int64 userid = 2;
    int64 gameid = 3;
    int64 seats = 4;
    string payment = 5;
    int64 statpay = 6;
    int64 status = 7;
}

message EmptyResponse {
   //Empty
}